just a test comment

--- a/carousel.css
+++ b/carousel.css
@@ -1,3 +1,5 @@
+/* Test comment*/
+
 .carousel.carousel-homepage.slick-initialized.slick-slider.slick-dotted div.slick-list .slick-track .slick-slide.slick-current.slick-active.slick-center {
     left: -39px !important;
 }
