change background url to absolute urls

--- a/OnBoarding.css
+++ b/OnBoarding.css
@@ -152,7 +152,7 @@
 /*	FOR HOME OVERLAY START*/
 
 .home-overlay .over1 {
-    background: url(/images/18.1e536fcd1729dcc958540/1591865334445/arrow-instructions_white.png) no-repeat bottom right;
+    background: url(https://conciergestage.stoppservice.com/images/18.1e536fcd1729dcc958540/1591865334445/arrow-instructions_white.png) no-repeat bottom right;
     background-size: 62px 72px;
     display: block;
     height: 120px;
@@ -168,7 +168,7 @@
 }
 
 .home-overlay .over2 {
-    background: url(/images/18.1e536fcd1729dcc958541/1591865341289/arrow-instructions_white-rotated.png) no-repeat bottom left;
+    background: url(https://conciergestage.stoppservice.com/images/18.1e536fcd1729dcc958541/1591865341289/arrow-instructions_white-rotated.png) no-repeat bottom left;
     background-size: 62px 72px;
     display: block;
     width: 230px;
@@ -202,7 +202,7 @@
 }
 
 .home-overlay .over3 {
-    background: url(/images/18.1e536fcd1729dcc958541/1591865341289/arrow-instructions_white-rotated.png) no-repeat bottom left;
+    background: url(https://conciergestage.stoppservice.com/images/18.1e536fcd1729dcc958541/1591865341289/arrow-instructions_white-rotated.png) no-repeat bottom left;
     background-size: 62px 72px;
     display: block;
     width: 240px;
@@ -217,7 +217,7 @@
 }
 
 .home-overlay .over4 {
-    background: url(/images/18.1e536fcd1729dcc958540/1591865334445/arrow-instructions_white.png) no-repeat bottom left;
+    background: url(https://conciergestage.stoppservice.com/images/18.1e536fcd1729dcc958540/1591865334445/arrow-instructions_white.png) no-repeat bottom left;
     background-size: 62px 72px;
     display: block;
     width: 269px;
