move down css code from sv page

--- a/carousel.css
+++ b/carousel.css
@@ -7,8 +7,10 @@
 
 .wrapper {
     width: 100%;
-    text-align: center;
+    align-items: center;
     margin: 0px auto;
+    display:flex; 
+    justify-content:center; 
 }
 
 .carousel {
