--- a/main.css
+++ b/main.css
@@ -1976,7 +1976,7 @@ input[type="submit"] {
     margin-top: -0.4em;
 }
 
-.slick-active.slick-center .bv-puff .bv-puff__content .bv-puff__description p {
+/*.slick-active.slick-center .bv-puff .bv-puff__content .bv-puff__description p {
     font-family: "AvenirMedium" !important;
     font-weight: normal;
     font-style: normal;
@@ -1984,7 +1984,7 @@ input[type="submit"] {
     color: #000000;
     line-height: 1.5833;
     margin-top: -0.2em;
-}
+}*/
 
 #email-sms-permissions-main #permissions .ok-button {
     background-color: #009ada;
