--- a/carousel.css
+++ b/carousel.css
@@ -385,7 +385,7 @@
     .sv-grid-958px .sv-row *[class*='sv-column-'].carousel {
         margin: 0;
         /*width:110%;*/
-        width: 90% !important;
+        width: auto !important;
         flex-grow: 1;
         height: 425px;
     }
