--- a/carousel.css
+++ b/carousel.css
@@ -390,16 +390,23 @@
         height: 425px;
     }
     .slick-slide {
-        margin: 0 auto;
+       /* margin: 0 auto;*/
         margin-bottom: 10px;
         max-width: 100%;
     }
-    .slick-list {
-        margin: 0 -12px;
-    }
-    .car-onboard.slick-slider div.slick-list.draggable .slick-track .slick-slide {
+    
+/* the slides */
+.slick-slide {
+    margin: 0 10px;
+}
+/* the parent */
+.slick-list {
+    margin: 0 -10px;
+}
+
+    /*.car-onboard.slick-slider div.slick-list.draggable .slick-track .slick-slide {
         margin: 0 auto;
-    }
+    }*/
     .slick-dots li button:before {
         font-size: 50px;
     }
