--- a/carousel.css
+++ b/carousel.css
@@ -390,19 +390,16 @@
         height: 425px;
     }
     .slick-slide {
-       /* margin: 0 auto;*/
+        margin: 0 auto;
         margin-bottom: 10px;
         max-width: 100%;
     }
     
-/* the slides */
-.slick-slide {
-    margin: 0 10px;
-}
-/* the parent */
-.slick-list {
-    margin: 0 -10px;
-}
+
+    /* the parent */
+    .slick-list {
+      margin: 0 auto;
+    }
 
     /*.car-onboard.slick-slider div.slick-list.draggable .slick-track .slick-slide {
         margin: 0 auto;
