--- a/carousel.css
+++ b/carousel.css
@@ -9,7 +9,7 @@
 .wrapper {
     width: 100%;
     align-items: center;
-    margin: 0px 0px;
+    margin: 0px auto;
     display:flex; 
     justify-content:center; 
 }
