--- a/carousel.css
+++ b/carousel.css
@@ -7,11 +7,13 @@
 
 
 .wrapper {
-    width: 100%;
+    width: 100% !important;
     align-items: center;
     margin: 0px auto;
     display:block; 
     justify-content:center; 
+    max-width: 100vw !important;
+    overflow: hidden;
 }
 
 .carousel {
