set a width also on breakpoint max 767px

--- a/carousel.css
+++ b/carousel.css
@@ -340,6 +340,9 @@
 } 
    */
 
+   .car-onboard.carousel .slick-slide {
+    width: 92vw !important;
+   } 
 
 
    .changeBackground .changeBackground.padding-bottom .car-onboard.carousel.slick-slider .slick-list.draggable {
