--- a/carousel.css
+++ b/carousel.css
@@ -404,7 +404,7 @@
         max-width: 100%;
     }
     .car-onboard.slick-slider div.slick-list.draggable .slick-track .slick-slide {
-        margin: 0 auto;
+        margin: 0 5px;
     }
     .slick-dots li button:before {
         font-size: 50px;
