--- a/carousel.css
+++ b/carousel.css
@@ -402,12 +402,14 @@
         height: 425px;
     }
     .slick-slide {
-        margin: 0 5px;
+        margin: 0 10px;
         margin-bottom: 10px;
         max-width: 100%;
     }
     .car-onboard.slick-slider div.slick-list.draggable .slick-track .slick-slide {
-        margin: 0 15px;
+        margin: 0 10px;
+        border-color: red;
+        border-width: 1px;
     }
     .slick-dots li button:before {
         font-size: 50px;
