--- a/carousel.css
+++ b/carousel.css
@@ -60,7 +60,7 @@
 .slick-dots {
     margin-top: 0;
     padding-left: 0;
-    border: solid red 1px;
+    /*border: solid red 1px;*/
 }
 
 .slick-dots li {
@@ -80,7 +80,7 @@
     display: block;
     width: 2em;
     height: 2em;
-    padding: 14px 10px;
+    padding: 0px 10px;
     padding-right: 25px;
     cursor: pointer;
     border: 0;
