--- a/carousel.css
+++ b/carousel.css
@@ -80,7 +80,7 @@
     display: block;
     width: 2em;
     height: 2em;
-    padding: 0px 10px;
+    padding: 0px 10px 10px 10px;
     padding-right: 25px;
     cursor: pointer;
     border: 0;
