--- a/carousel.css
+++ b/carousel.css
@@ -58,8 +58,9 @@
 }
 
 .slick-dots {
-    margin-top: -5px;
+    margin-top: 0;
     padding-left: 0;
+
     /*border: solid red 1px;*/
 }
 
@@ -81,6 +82,7 @@
     width: 2em;
     height: 2em;
     padding: 14px 10px;
+    padding-bottom: 19px;
     padding-right: 25px;
     cursor: pointer;
     border: 0;
