--- a/carousel.css
+++ b/carousel.css
@@ -58,7 +58,7 @@
 }
 
 .slick-dots {
-    margin-top: 0;
+    margin-top: -5px;
     padding-left: 0;
 
     /*border: solid red 1px;*/
@@ -82,7 +82,6 @@
     width: 2em;
     height: 2em;
     padding: 14px 10px;
-    padding-bottom: 19px;
     padding-right: 25px;
     cursor: pointer;
     border: 0;
