--- a/carousel.css
+++ b/carousel.css
@@ -81,8 +81,8 @@
     font-size: 0;
     line-height: 0;
     display: block;
-    width: 2em;
-    height: 2em;
+    /*width: 2em;
+    height: 2em;*/ 
     padding: 14px 10px;
     padding-right: 25px;
     cursor: pointer;
