--- a/carousel.css
+++ b/carousel.css
@@ -24,8 +24,8 @@
 
 .car-onboard {
     display: none;
-    overflow: hidden;
-    padding-bottom: 10px;
+   /* overflow: hidden;
+    padding-bottom: 10px;*/
 }
 
 .car-onboard .slick-next1,
