--- a/carousel.css
+++ b/carousel.css
@@ -13,7 +13,7 @@
     display:block; 
     justify-content:center; 
     max-width: 100vw !important;
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 
 .carousel {
