Made image URL:s absolute.

--- a/OnBoarding.css
+++ b/OnBoarding.css
@@ -95,7 +95,7 @@
 }
 
 .onboarding-page .sv-decoration-big-button a {
-    background-image: url(/images/18.4ae913a7171a093527c24/1587541411591/BankID-norway.png);
+    background-image: url(https://conciergestage.stoppservice.com/images/18.4ae913a7171a093527c24/1587541411591/BankID-norway.png);
     background-position: -20% 50%;
     background-size: 1.2em 1.2em;
     background-repeat: no-repeat;
