--- a/main.css
+++ b/main.css
@@ -1765,7 +1765,7 @@ input[type="submit"] {
         content: "";
         width: 50px;
         height: 42px;
-        background: url(/images/18.1d53dd01724f87cba1516/1591630169374/concierge-white.png) no-repeat;
+        background: url(https://conciergestage.stoppservice.com/images/18.1d53dd01724f87cba1516/1591630169374/concierge-white.png) no-repeat;
         background-position: center center;
         position: absolute;
         display: inline-block;
