--- a/main.css
+++ b/main.css
@@ -1296,7 +1296,7 @@ button[name="qondorLink"] {
 }
 
 .lSAction>.lSPrev {
-    background-image: url(/images/18.3a7e2574173ece0c021510/1599574667102/arrow-white-left.png);
+    background-image: url(https://conciergestage.stoppservice.com/images/18.3a7e2574173ece0c021510/1599574667102/arrow-white-left.png);
     background-size: 35px 35px;
     width: 35px;
     height: 35px;
@@ -1304,7 +1304,7 @@ button[name="qondorLink"] {
 }
 
 .lSAction>.lSNext {
-    background-image: url(/images/18.3a7e2574173ece0c021511/1599574667107/arrow-white-right.png);
+    background-image: url(https://conciergestage.stoppservice.com/images/18.3a7e2574173ece0c021511/1599574667107/arrow-white-right.png);
     background-size: 35px 35px;
     background-position: -35px 0 !important;
     width: 35px;
@@ -1621,14 +1621,14 @@ input[type="submit"] {
         min-width: 100px;
     }
     .lSAction>.lSPrev {
-        background-image: url(/images/18.3a7e2574173ece0c021510/1599574667102/arrow-white-left.png);
+        background-image: url(https://conciergestage.stoppservice.com/images/18.3a7e2574173ece0c021510/1599574667102/arrow-white-left.png);
         background-size: 20px 20px;
         width: 20px;
         height: 20px;
         opacity: 1;
     }
     .lSAction>.lSNext {
-        background-image: url(/images/18.3a7e2574173ece0c021511/1599574667107/arrow-white-right.png);
+        background-image: url(https://conciergestage.stoppservice.com/images/18.3a7e2574173ece0c021511/1599574667107/arrow-white-right.png);
         background-size: 20px 20px;
         background-position: -20px 0 !important;
         width: 20px;
